# tabplot

./: README.md  flake.nix  requirements.txt  setup.cfg
examples/: monodisperse  test.py
examples/bars/: bar2.py  bar_a.csv  bar_b.csv  barplot.py  commits-by-date-2.csv  commits-by-date.csv
examples/histograms/: hist.py  hist1.csv  hist2.csv
examples/lines/: 01 - simple.py  02 - multi_draw.py  03 - operations.py  04 - twinx.py  05 - no_files.py  line_b.tsv
examples/s-tui/: s-tui-log.txt  s-tui-plot.py
examples/violins/: list1.txt  list2.txt  tplot.py
tabplot/: __init__.py  barplot.py  figure.py  histogram.py  plot.py  postprocessing.py  scores.py  utils.py  violinplot.py
tests/: default.py
tplot/: __init__.py  barplot.py  histogram.py  plot.py  postprocessing.py  utils.py
