[metadata]
name = tabplot
version = 0.1
author = Jayghosh Rao
author_email = jayghoshter@gmail.com
description = Tplot: A wrapper over matplotlib for reading tabular (csv) text files.
long_description = file: README.md
long_description_content_type = text/markdown
url = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    matplotlib
    numpy
    scipy
    rich
