[metadata]
name = tabplot
version = 0.1
author = Jayghosh Rao
author_email = jayghoshter@gmail.com
description = Tabplot: A wrapper over matplotlib for reading tabular (csv) text files.
license = MIT
license_file = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = true
install_requires =
    matplotlib
    numpy
    scipy
    rich
    numexpr
